# jabber-webhook

./: .env.example.txt  .gitignore  Cargo.toml  LICENSE  README.md  Readme.md
src/: main.rs
