[package]
name = "jabber-webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
xmpp = { version = "0.7.0", features = ["aws_lc_rs", "rustls-native-certs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
